testimonial resolved image stretching issue

--- a/HTML/assets/css/responsive.css
+++ b/HTML/assets/css/responsive.css
@@ -187,6 +187,18 @@
     .post-content {
         width: 236px;
     }
+    #testimonial .user-icon img {
+        max-width: 100%;
+	max-height: 100%;
+	width:auto;
+	height: auto;
+    }
+    #testimonial .slider-nav-control {
+            bottom: 10px;
+    }
+    .testimonial-content {
+        top: 100px;
+    }
     /*how it work process arrow*/
     .process-block .financial-product-item .process-arrow {
         right: -63px;
